@@ -989,6 +989,9 @@ v636  6/18/23   Fix -D in MS-DOS build; fix mouse wheel in MS-DOS build.
 v637  6/28/23   Fix early EOF when SIGWINCH is received.
 v638  6/29/23   Fix compile error with ECHONL.
 v639  6/29/23   Fix SIGWINCH while reading tty.
+v640  7/10/23   Add lesstest to release.
+v641  7/10/23   Fix release.
+v642  7/10/23   Fix release.
 */
 
-char version[] = "639";
+char version[] = "642";
